cmake_minimum_required(VERSION 3.30)
project(Laborator_rezolvat__10_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Laborator_rezolvat__10_ main.cpp
        Multime/Multime.cpp
        Multime/IteratorMultime.cpp
        Multime/IteratorMultime.h
        Teste/TestScurt.cpp
        Teste/TestExtins.cpp)
